--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,8 @@ service:
 plugins:
   - serverless-bundle
 
+variablesResolutionMode: 20210326
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -27,30 +29,36 @@ functions:
       - http:
           method: POST
           path: /auction  
+          authorizer: ${self:custom.authorizer}
+
   getAuctions:
     handler: src/handlers/getAuctions.handler
     events:
       - http:
           method: GET
           path: /auctions
+          authorizer: ${self:custom.authorizer}
   getAuction:
     handler: src/handlers/getAuction.handler
     events:
       - http:
           method: GET
           path: /auction/{id}
+          authorizer: ${self:custom.authorizer}
   placeBid:
     handler: src/handlers/placeBid.handler
     events:
       - http:
           method: PATCH
           path: auction/{id}/bid
+          authorizer: ${self:custom.authorizer}
   processAuctions:
     handler: src/handlers/processAuctions.handler
     # events:
     #   - schedule: rate(1 minute)
 
 custom:
+  authorizer: arn:aws:lambda:${aws:region}:${aws:accountId}:function:auth-service-${self:provider.stage}-auth
   AuctionTable:
     name: !Ref AuctionTable
     arn: !GetAtt AuctionTable.Arn
