--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^7.32.0",
     "serverless-bundle": "^1.3.3",
     "webpack": "^4.35.2"
   },
