--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "serverless-bundle": "^1.3.3",
     "webpack": "^4.35.2"
   },
