--- a/serverless.yml
+++ b/serverless.yml
@@ -16,13 +16,18 @@ provider:
   environment:
     AUCTION_TABLE_NAME: ${self:custom.AuctionTable.name}
     MAIL_QUEUE_URL: ${self:custom.mailQueue.url}
+    AUCTION_BUCKET_NAME: ${self:custom.AuctionsBucket.name}
+    # AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
   iamRoleStatements:
     - ${file(iam/auctionTableIAM.yaml):AuctionTableIAM}
     - ${file(iam/mailQueueIAM.yml):SQSQueueIAM}
+    - ${file(iam/AuctionsBucketIAM.yml):AuctionsBucketIAM}
 
 resources:
   Resources:
     AuctionTable: ${file(resources/auctionTable.yaml):AuctionTable}
+    AuctionsBucket: ${file(resources/auctionsBucket.yml):AuctionsBucket}
+    AuctionsBucketPolicy: ${file(resources/auctionsBucket.yml):AuctionsBucketPolicy}
     
 functions:
   createAuction:
@@ -54,6 +59,13 @@ functions:
           method: PATCH
           path: auction/{id}/bid
           authorizer: ${self:custom.authorizer}
+  uploadAuctionsPicture:
+    handler: src/handlers/uploadAuctionsPicture.handler
+    events:
+      - http:
+          method: PATCH
+          path: auction/{id}/uploadAuctionsPicture
+          authorizer: ${self:custom.authorizer}
   processAuctions:
     handler: src/handlers/processAuctions.handler
     # events:
@@ -67,5 +79,5 @@ custom:
   mailQueue:
     arn: ${cf:notification-service-${self:provider.stage}.MailQueueArn}
     url: ${cf:notification-service-${self:provider.stage}.MailQueueUrl}
-  bundle:
-    linting: false
+  AuctionsBucket:
+    name: auction-project-sdfacklwl212d-${self:provider.stage}
