--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.1",
+    "@middy/http-cors": "^2.5.2",
     "@middy/http-error-handler": "^2.5.1",
     "@middy/http-event-normalizer": "^2.5.1",
     "@middy/http-json-body-parser": "^2.5.1",
